AC_PREREQ(2.50)

AC_INIT([Daimonin_3D_Client], 0.0.1)
AM_INIT_AUTOMAKE([Daimonin_3D_Client], 0.0.1)
#AM_CONFIG_HEADER(../../source/include/config.h)

#AC_CONFIG_AUX_DIR(make_utils)
AC_PREFIX_DEFAULT(../../../client-3d-alpha1)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl g++ version check
if test x$GCC = xyes; then
	AC_MSG_CHECKING([version 3.x of gcc])
    if test -n "`$CC --version 2>&1|grep '3.'`"; then
#    	AC_DEFINE(EXT_HASH,, Use old STL hash options)
#        AC_DEFINE(GCC_3_1,, 3.x GCC version)
        AC_MSG_RESULT(yes);
    else
        AC_MSG_RESULT(no)!
    fi
fi

dnl find the ogre package
PKG_CHECK_MODULES(OGRE, OGRE)
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

# Find fmod stuff
AC_SUBST(FMOD_CFLAGS, "-Iinclude/fmod")
AC_SUBST(FMOD_LIBS, "-L../make/linux -lfmod-3.74")

AC_PATH_PROG(DEPEND, makedepend)
AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(RMDIR,rmdir)
AC_PATH_PROG(MKDIR,mkdir)

AC_CHECK_FUNCS(stricmp strnicmp strcasecmp strncasecmp)
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([fcntl.h])

if test "x$prefix" != xNONE; then
   AC_DEFINE_UNQUOTED(PREFIX, "${prefix}", [Installation prefix])
else
   AC_DEFINE_UNQUOTED(PREFIX, "${ac_default_prefix}", [Installation prefix])
fi

#AC_CONFIG_HEADER(../../src/include/define.h)
AC_OUTPUT(Makefile source/Makefile source/include/Makefile source/include/fmod/Makefile)
