AC_PREREQ(2.50)

AC_INIT([Daimonin_3D_Client], 0.0.1)
AM_INIT_AUTOMAKE([Daimonin_3D_Client], 0.0.1)
#AM_CONFIG_HEADER(../../source/include/config.h)

#AC_CONFIG_AUX_DIR(make_utils)
AC_PREFIX_DEFAULT(../../../client-3d-alpha1)

AM_PROG_CC_C_O
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl find the ogre package
export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/local/lib/pkgconfig

PKG_CHECK_MODULES(OGRE, OGRE)
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

# Find fmod stuff
AC_SUBST(FMOD_CFLAGS, "-I3rdParty/fmod")
AC_SUBST(FMOD_LIBS, "-L../make/linux -lfmodex64")

# Find tinyxml stuff
AC_SUBST(TXML_CFLAGS, "-I3rdParty/tinyxml")

# Find zlib stuff
AC_SUBST(ZLIB_CFLAGS, "-I3rdParty/zlib")

AC_PATH_PROG(DEPEND, makedepend)
AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(RMDIR,rmdir)
AC_PATH_PROG(MKDIR,mkdir)

AC_CHECK_FUNCS(stricmp strnicmp strcasecmp strncasecmp)
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([fcntl.h])

if test "x$prefix" != xNONE; then
   AC_DEFINE_UNQUOTED(PREFIX, "${prefix}", [Installation prefix])
else
   AC_DEFINE_UNQUOTED(PREFIX, "${ac_default_prefix}", [Installation prefix])
fi

#AC_CONFIG_HEADER(../../src/include/define.h)
AC_OUTPUT(Makefile source/Makefile source/include/Makefile source/3rdParty/fmod/Makefile source/3rdParty/tinyxml/Makefile source/3rdParty/zlib/Makefile)
